fixed services alignment

--- a/static/base.css
+++ b/static/base.css
@@ -663,6 +663,15 @@ a.admin-panel:hover {
     opacity: 0.8;
 }
 
+a.services {
+    width: 24px;
+    height: 24px;
+}
+
+a.services:hover {
+    opacity: 0.8;
+}
+
 
 /* modals */
 ::backdrop {
